<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/button_spotify"
        android:onClick="onButtonSpotifyClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button_scores"
        android:layout_below="@+id/button_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonScoresClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button_library"
        android:layout_below="@+id/button_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonLibraryClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_buildItBigger"
        android:id="@+id/button_buildItBigger"
        android:layout_below="@+id/button_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonBuildItBiggerClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_xyzReader"
        android:id="@+id/button_xyzReader"
        android:layout_below="@+id/button_buildItBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonXYZReaderClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_capstoneMyOwnApp"
        android:id="@+id/button_capstoneMyOwnApp"
        android:layout_below="@+id/button_xyzReader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonCapstoneClicked" />
</RelativeLayout>
